# multiio

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: cd.yml  prek.yml  release-plz-pr.yml  release-plz-release.yml  tests.yml
benches/: engine_read_write.rs
e2e/: README.md  pyproject.toml
e2e/data/input/csv_roundtrip/: input.csv
e2e/data/input/ini_error_invalid_syntax/: input.ini
e2e/data/input/ini_roundtrip/: input.ini
e2e/data/input/json_to_toml_sync/: input.json
e2e/data/input/manual_ini_one_in_one_out/: input.ini
e2e/data/input/manual_multi_in_stdin_and_files/: input1.json  input2.json
e2e/data/input/manual_one_in_one_out/: input.json
e2e/data/input/manual_toml_one_in_one_out/: input.toml
e2e/data/input/mixed_multi_in_single_out_sync/: input.ini  input.toml  input_json.json
e2e/data/input/multi_in_multi_out_sync/: input1.json  input2.json
e2e/data/input/records_yaml_demo/: input.yaml
e2e/data/input/toml_error_invalid_syntax/: input.toml
e2e/data/input/toml_multi_outputs_sync/: input.toml
e2e/data/input/toml_roundtrip/: input.toml
e2e/data/input/toml_to_ini_sync/: input.toml
e2e/data/input/xml_roundtrip/: input.xml
e2e/data/input/yaml_roundtrip/: input.yaml
e2e/data/input/yaml_to_toml_sync/: input.yaml
e2e/data/output/baseline/csv_roundtrip/: output.json
e2e/data/output/baseline/ini_roundtrip/: output.json
e2e/data/output/baseline/json_multi_outputs_sync/: output.csv  output.json  output.yaml
e2e/data/output/baseline/json_to_multi_format/: output.md
e2e/data/output/baseline/json_to_toml_sync/: output.toml
e2e/data/output/baseline/manual_ini_one_in_one_out/: output.json
e2e/data/output/baseline/manual_multi_in_one_out/: output.json
e2e/data/output/baseline/manual_multi_in_stdin_and_files/: output.json
e2e/data/output/baseline/manual_toml_one_in_one_out/: output.json
e2e/data/output/baseline/mixed_multi_in_single_out_sync/: output.json
e2e/data/output/baseline/plaintext_lines/: output.json
e2e/data/output/baseline/simple_json_roundtrip/: output.json
e2e/data/output/baseline/toml_multi_outputs_sync/: output.json  output.yaml
e2e/data/output/baseline/toml_roundtrip/: output.json
e2e/data/output/baseline/toml_to_ini_sync/: output.ini
e2e/data/output/baseline/xml_roundtrip/: output.json
e2e/data/output/baseline/yaml_roundtrip/: output.json
e2e/data/output/baseline/yaml_to_toml_sync/: output.toml
e2e/tests/: conftest.py  test_async_pipeline.py  test_csv.py  test_errors_pipeline.py  test_features_matrix.py  test_ini.py  test_json_to_multi_format.py  test_large_datasets.py  test_manual_cli.py  test_manual_cli_errors.py  test_manual_cli_toml_ini.py  test_more_conversions.py  test_pipeline_topologies_sync.py  test_plaintext.py  test_records_demo.py  test_sarge_cli.py  test_simple_json_roundtrip.py  test_stdin_stdout.py  test_toml.py  test_toml_ini_async.py  test_toml_ini_errors.py  test_yaml.py
examples/: basic_async.rs  basic_sync.rs  custom_format.rs  from_pipeline.rs  in_memory.rs
examples/data/: config.json
scripts/: sync_readme.py  update_readme_release_metrics.sh
src/: builder.rs  builder_async.rs  engine.rs  engine_async.rs  lib.rs
src/cli/: mod.rs  sarge.rs
src/config/: async_spec.rs  mod.rs  pipeline.rs  spec.rs
src/error/: miette_impl.rs  mod.rs
src/format/: async_format.rs  csv.rs  csv_format.rs  custom.rs  ini.rs  json.rs  markdown.rs  mod.rs  plaintext.rs  toml.rs  xml.rs  yaml.rs
src/io/: async_input.rs  async_output.rs  async_std_io.rs  input.rs  memory.rs  mod.rs  output.rs  std_io.rs
src/tests/: feature_matrix.rs  mod.rs
src/tests/builder/: async_pipeline_e2e.rs  mod.rs  pipeline_e2e.rs
src/tests/cli/: mod.rs  parse_tests.rs  sarge_tests.rs
src/tests/config/: pipeline_tests.rs  spec_tests.rs
src/tests/engine/: async_tests.rs  business_tests.rs  csv_row_stream_tests.rs  json_row_stream_tests.rs  mod.rs  stream_tests.rs  sync_tests.rs
src/tests/error/: aggregate_tests.rs  mod.rs  policy_tests.rs
src/tests/format/: csv_tests.rs  custom_stream_tests.rs  custom_tests.rs  ini_tests.rs  json_tests.rs  markdown_tests.rs  mod.rs  plaintext_stream_tests.rs  registry_tests.rs  toml_tests.rs  xml_tests.rs  yaml_tests.rs
src/tests/io/: memory_tests.rs  stdio_tests.rs
tests/config/: mod.rs
tests/error/: aggregate_tests.rs
tests/io/: memory_tests.rs  mod.rs
